--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -20,7 +20,7 @@ tests:
     parameters:
       AvailabilityZones: $[taskcat_genaz_2]
       DBEngineVersion: Aurora-MySQL5.7.12
-      DBMasterUserPassword: $[taskcat_genpass_8S]
+      DBMasterUserPassword: Passw0rd1!
       DBMultiAZ: "false"
       EnableBastion: "false"
       KeyPairName: override
