--- a/templates/aurora_mysql-master.template.yaml
+++ b/templates/aurora_mysql-master.template.yaml
@@ -1,9 +1,19 @@
 ---
 AWSTemplateFormatVersion: '2010-09-09'
-Description: "AWS VPC + Aurora MySql, Do Not Remove Apache License Version 2.0 (qs-) Jun,15,2019"
+Description: "AWS VPC + Aurora MySql, Do Not Remove Apache License Version 2.0 (qs-1r51947bu) Jun,15,2019"
 
 Metadata:
   LICENSE: Apache License Version 2.0
+  QuickStartDocumentation:
+    EntrypointName: "Launch into a new VPC"
+    Order: "1"
+    OptionalParameters:
+      - EnvironmentStage
+      - Application
+      - ApplicationVersion
+      - ProjectCostCenter
+      - Confidentiality
+      - Compliance
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
