--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -5,7 +5,7 @@ Description: "AWS Aurora MySql, Do Not Remove Apache License Version 2.0 (qs-1r5
 Metadata:
   LICENSE: Apache License Version 2.0
   QuickStartDocumentation:
-    EntrypointName: "Launch into an existing VPC"
+    EntrypointName: "Parameters for deploying into an existing VPC"
     Order: "2"
     OptionalParameters:
       - EnvironmentStage
@@ -42,14 +42,14 @@ Metadata:
           - DBCWLogExports
           - NotificationList
       - Label:
-          default: Serverless (Applicable only for Database Engine Mode = Serverless)
+          default: Serverless—applicable only when database engine mode (DBEngineMode) is serverless
         Parameters:
           - ServerlessMinCapacityUnit
           - ServerlessMaxCapacityUnit
           - ServerlessAutoPause
           - ServerlessSecondsUntilAutoPause
       - Label:
-          default: Database tags (optional)
+          default: (Optional) Database tags
         Parameters:
           - EnvironmentStage
           - Application
@@ -66,24 +66,26 @@ Metadata:
     ParameterLabels:
       DBName:
         default: Database name
+      RotateDBPassword:
+        default: Rotate database password
       DBEngineVersion:
-        default: Database Engine Version
+        default: Database engine version
       DBEngineMode:
-        default: Database Engine Mode
+        default: Database engine mode
       DBAllocatedStorageEncrypted:
         default: Database encryption enabled
       DBCWLogExports:
-        default: Database CloudWatch Log Exports
+        default: Database CloudWatch log exports
       DBAutoMinorVersionUpgrade:
-        default: Database auto minor version upgrade
+        default: Database automatic minor version upgrades
       DBBackupRetentionPeriod:
         default: Database backup retention period
       DBInstanceClass:
         default: Database instance class
       DBMasterUsername:
-        default: Database master username
+        default: Database administrator user name
       DBMasterUserPassword:
-        default: Database master password
+        default: Database administrator password
       DBPort:
         default: Database port
       DBAccessCIDR:
@@ -99,7 +101,7 @@ Metadata:
       CustomDBSecurityGroup:
         default: Custom security group ID
       NotificationList:
-        default: SNS notification email
+        default: SNS notification-list email address
       EnvironmentStage:
         default: Environment stage
       Application:
@@ -123,7 +125,7 @@ Metadata:
       QSS3BucketName:
         default: Quick Start S3 bucket name
       QSS3BucketRegion:
-        default: Quick Start S3 bucket region
+        default: Quick Start S3 bucket Region
       QSS3KeyPrefix:
         default: Quick Start S3 key prefix
 
@@ -132,58 +134,58 @@ Parameters:
     AllowedPattern: "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$"
     ConstraintDescription: "Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
     Default: aws-quickstart
-    Description: "S3 bucket name for the Quick Start assets. Quick Start bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
+    Description: "Name of the S3 bucket for your copy of the Quick Start assets. Keep the default name unless you are customizing the template. Changing the name updates code references to point to a new Quick Start location. This name can include numbers, lowercase letters, uppercase letters, and hyphens, but do not start or end with a hyphen (-). See https://aws-quickstart.github.io/option1.html."
     Type: String
   QSS3BucketRegion:
     Default: 'us-east-1'
-    Description: 'The AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value.'
+    Description: 'AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. Keep the default Region unless you are customizing the template. Changing this Region updates code references to point to a new Quick Start location. When using your own bucket, specify the Region. See https://aws-quickstart.github.io/option1.html.'
     Type: String
   QSS3KeyPrefix:
     AllowedPattern: "^[0-9a-zA-Z-/]*$"
     ConstraintDescription: "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/)."
     Default: quickstart-amazon-aurora-mysql/
-    Description: "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/)."
+    Description: "S3 key prefix that is used to simulate a directory for your copy of the Quick Start assets. Keep the default prefix unless you are customizing the template. Changing this prefix updates code references to point to a new Quick Start location. This prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slashes (/). End with a forward slash. See https://docs.aws.amazon.com/AmazonS3/latest/dev/UsingMetadata.html and https://aws-quickstart.github.io/option1.html."
     Type: String
   DBMultiAZ:
     AllowedValues:
       - "true"
       - "false"
     Default: "true"
-    Description: "Specifies if the database instance is a multiple Availability Zone deployment. Not applicable for Aurora Serverless."
+    Description: If the database instance is not in a multiple Availability Zone deployment, choose "false." Not applicable for Aurora Serverless.
     Type: String
   DBAllocatedStorageEncrypted:
     Default: "true"
     AllowedValues:
       - "true"
       - "false"
-    Description: Whether or not to encrypt the database.
+    Description: To disable database encryption, choose "false."
     Type: String
   DBCWLogExports:
     Type: CommaDelimitedList
     Default: ''
-    Description: "Specify comma delimited list of Database logs ( error, slowquery, audit ) to export to CloudWatch Logs."
+    Description: "Specify the comma-delimited list of database logs (error, slowquery, audit) to export to CloudWatch Logs."
   RotateDBPassword:
     Default: "false"
     AllowedValues:
       - "true"
       - "false"
-    Description: Whether or not to rotate the database password on a schedule (every 89 days).
+    Description: To rotate the password on a schedule (every 89 days), choose "true."
     Type: String
   DBAutoMinorVersionUpgrade:
     AllowedValues:
       - "true"
       - "false"
     Default: "false"
-    Description: "Select true to enable auto minor version upgrade."
+    Description: To enable automatic minor version upgrades, choose "true."
     Type: String
   DBBackupRetentionPeriod:
     Default: 35
-    Description: "The number of days for which automatic database snapshots are retained from 1 to 35 days."
+    Description: "Number of days (from 1 to 35) that automatic database snapshots are retained."
     Type: Number
     MinValue: 1
     MaxValue: 35
   DBEngineVersion:
-    Description: Select Database Engine Version
+    Description: Version of the database engine.
     Type: String
     Default: 'Aurora-MySQL5.6.10a'
     AllowedValues:
@@ -216,7 +218,7 @@ Parameters:
       - 'Aurora-MySQL5.7-2.08.2'
       - 'Aurora-MySQL5.7-2.09.0'
   DBEngineMode:
-    Description: The engine mode of the cluster. Currently Aurora Serverless, Global Database and Multi-Master is available for Aurora-MySQL5.6.10a. Aurora Parallel Query is available for Aurora MySQL5.6-x versions.
+    Description: Engine mode of the cluster. Aurora Serverless, Global Database, and Multi-Master are available for Aurora-MySQL5.6.10a. Aurora Parallel Query is available for Aurora MySQL5.6-x versions.
     Type: String
     Default: 'provisioned'
     AllowedValues:
@@ -240,7 +242,7 @@ Parameters:
       - db.r4.large
     ConstraintDescription: "Must select a valid database instance type."
     Default: db.r4.large
-    Description: "The name of the compute and memory capacity class of the database instance. Not Applicable for Aurora Serverless. Supported instance types for Aurora Multi-Master is db.r4.[2/4/8]xlarge only currently."
+    Description: "Name of the compute and memory-capacity class of the database instance. Not applicable for Aurora Serverless. Supported instance type for Aurora Multi-Master is db.r4.[2/4/8]xlarge only."
     Type: String
   DBAccessCIDR:
     AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
@@ -251,7 +253,7 @@ Parameters:
   DBMasterUserPassword:
     AllowedPattern: ^(?=^.{8,255}$)(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[^A-Za-z0-9])(?!.*[@/"']).*$
     ConstraintDescription: "Min 8 chars. Must include 1 uppercase, 1 lowercase, 1 number, 1 (non / @ \" ') symbol"
-    Description: "The database admin account password.Min 8 chars. Must include 1 uppercase, 1 lowercase, 1 number, 1 (non / @ \" ') symbol."
+    Description: "Administrator password for the database account. Minimum 8 characters. Must include 1 uppercase, 1 lowercase, 1 number, 1 symbol (not / @ \" ')."
     MaxLength: "64"
     MinLength: "8"
     NoEcho: "True"
@@ -260,13 +262,13 @@ Parameters:
     AllowedPattern: "[a-zA-Z][a-zA-Z0-9]*"
     ConstraintDescription: "Must begin with a letter and contain only alphanumeric characters."
     Default: msadmin
-    Description: "The database admin account username."
+    Description: "Administrator user name for the database account."
     MaxLength: "16"
     MinLength: "1"
     Type: String
   DBPort:
     Default: 3306
-    Description: "The port on which the DB instance will listen for connections. Aurora Serverless currently supports port 3306 only."
+    Description: "Port on which the DB instance listens for connections. Aurora Serverless supports port 3306 only."
     Type: Number
     ConstraintDescription: 'Must be in the range [1150-65535].'
     MinValue: 1150
@@ -282,10 +284,10 @@ Parameters:
     Type: String
     Default: ''
   Subnet1ID:
-    Description: The ID of the private subnet in Availability Zone 1.
+    Description: ID of the private subnet in Availability Zone 1.
     Type: 'AWS::EC2::Subnet::Id'
   Subnet2ID:
-    Description: The ID of the private subnet in Availability Zone 2.
+    Description: ID of the private subnet in Availability Zone 2.
     Type: 'AWS::EC2::Subnet::Id'
   VPCID:
     Description: "ID of the VPC you are deploying Aurora into (e.g., vpc-0343606e)."
@@ -294,12 +296,12 @@ Parameters:
   NotificationList:
     Type: String
     Default: 'db-ops@domain.com'
-    Description: The email notification used to configure an SNS topic for sending CloudWatch alarm and RDS event notifications.
+    Description: Email-list address used to configure an SNS topic for sending CloudWatch alarm and RDS event notifications.
     AllowedPattern: '^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
     ConstraintDescription: Provide a valid email address.
   EnvironmentStage:
     Type: String
-    Description: Designates the environment stage of the associated AWS resource. (Optional)
+    Description: (Optional) Environment stage of the associated AWS resource.
     AllowedValues:
       - dev
       - test
@@ -310,19 +312,19 @@ Parameters:
   Application:
     Type: String
     Default: ''
-    Description: Designates the application of the associated AWS resource. (Optional)
+    Description: (Optional) Name of the application for the associated AWS resource.
   ApplicationVersion:
     Type: String
-    Description: Dsignates the specific version of the application. (Optional)
+    Description: (Optional) Version of the application.
     Default: ''
   ProjectCostCenter:
     Type: String
     Default: ''
-    Description: Designates the cost center associated with the project of the given AWS resource. (Optional)
+    Description: (Optional) Cost center associated with the project of the associated AWS resource.
   Confidentiality:
     Type: String
     Default: ''
-    Description: Designates the confidentiality classification of the data that is associated with the resource. (Optional)
+    Description: (Optional) Confidentiality classification of the data that is associated with the AWS resource.
     AllowedValues:
       - public
       - private
@@ -332,7 +334,7 @@ Parameters:
   Compliance:
     Type: String
     Default: ''
-    Description: Designates the compliance level for the AWS resource. (Optional)
+    Description: (Optional) Compliance level for the AWS resource.
     AllowedValues:
       - hipaa
       - sox
@@ -340,7 +342,7 @@ Parameters:
       - other
       - ''
   ServerlessMinCapacityUnit:
-    Description: The minimum capacity for an Aurora DB cluster in serverless DB engine mode. The minimum capacity must be less than or equal to the maximum capacity.
+    Description: Minimum capacity for an Aurora DB cluster in serverless DB engine mode. The minimum capacity must be less than or equal to the maximum capacity.
     Type: String
     Default: '2'
     AllowedValues:
@@ -354,7 +356,7 @@ Parameters:
       - '128'
       - '256'
   ServerlessMaxCapacityUnit:
-    Description: The maximum capacity for an Aurora DB cluster in serverless DB engine mode. The maximum capacity must be greater than or equal to the minimum capacity.
+    Description: Maximum capacity for an Aurora DB cluster in serverless DB engine mode. The maximum capacity must be greater than or equal to the minimum capacity.
     Type: String
     Default: '64'
     AllowedValues:
@@ -368,14 +370,14 @@ Parameters:
       - '128'
       - '256'
   ServerlessAutoPause:
-    Description: Specifies whether to allow or disallow automatic pause for an Aurora DB cluster in serverless DB engine mode. A DB cluster can be paused only when its idle (it has no connections).
+    Description: To enable automatic pause for an Aurora DB cluster in serverless DB engine mode, choose "true." A DB cluster can be paused only when it's idle (when it has no connections).
     Type: String
     Default: 'false'
     AllowedValues:
       - 'true'
       - 'false'
   ServerlessSecondsUntilAutoPause:
-    Description: The time, in seconds, before an Aurora DB cluster in serverless mode is auto paused. Min = 300, Max = 86400 (24hrs)
+    Description: Time, in seconds, before an Aurora DB cluster in serverless mode is automatically paused. Minimum = 300. Maximum = 86400 (24 hours).
     Type: Number
     Default: 300
     MaxValue: 86400
@@ -1290,7 +1292,7 @@ Outputs:
     Description: "Full Amazon Aurora Cluster endpoint with port and database name"
     Value: !Sub ${AuroraDBCluster.Endpoint.Address}:${AuroraDBCluster.Endpoint.Port}/${DBName}
   AuroraMasterUsername:
-    Description: "Amazon Aurora Master username"
+    Description: "Amazon Aurora administrator user name"
     Value: !Ref DBMasterUsername
   AuroraMasterUserSecret:
     Condition: DBPasswordRotation
@@ -1298,5 +1300,5 @@ Outputs:
     Value: !Ref RDSInstanceRotationSecret
   AuroraEncryptionKey:
     Condition: UseDatabaseEncryption
-    Description: "The alias of the KMS encryption key used for storage and Performance Insights data encryption"
+    Description: "Alias of the KMS encryption key used for storage and Performance Insights data encryption"
     Value: !Ref EncryptionKeyAlias
